Fixed a window size issue on smaller devices

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -11,6 +11,7 @@ main{
   max-width: 1240px;
   margin: auto;
   padding: 1rem;
+  box-sizing: border-box;
 }
 
 h2 {
